--- a/savmet2.css
+++ b/savmet2.css
@@ -15,7 +15,7 @@ position: static;
 
 
 .navbar {
-  width: 500px;
+  width: 1100px;
   background-color: #555;
   overflow: auto;
 }
@@ -82,6 +82,7 @@ background-color: lightblue;
 #contact{
 	position: relative;
 	left: 300px;
+	text-align: center;
 	color: brown;
 	font-size: 18px;
 }
