--- a/savmet2.css
+++ b/savmet2.css
@@ -80,9 +80,7 @@ background-color: lightblue;
 }
 
 #contact{
-	position: relative;
-	right: 500px;
-	
+	text-align: center;
 	color: brown;
 	font-size: 18px;
 }
