--- a/savmet2.css
+++ b/savmet2.css
@@ -80,10 +80,11 @@ background-color: lightblue;
 }
 
 #contact{
-	
+	text-align: center;
 	color: brown;
 	font-size: 18px;
 }
+	
 
 .rights{
 	opacity: 0.6;
