--- a/savmet2.css
+++ b/savmet2.css
@@ -80,11 +80,10 @@ background-color: lightblue;
 }
 
 #contact{
-	
+	text-align: center;
 	color: brown;
 	font-size: 18px;
-	position: relative;
-	left: 200px;
+	
 }
 	
 
